# helm-vault-inject

./: .flake8  .gitignore  README.md  plugin.yaml  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/: vault_injector.py
test/: test_main.py
tests/: test_main.py
