[project]
name = "helm-vault-inject"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = [
    "hvac",
    "ruamel.yaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.black]
line-length = 80
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
